--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -17,7 +17,7 @@ jobs:
           - 5432:5432
     steps:
       - name: Setup | Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup | Cache rust
         uses: Swatinem/rust-cache@v1
       - name: Setup | Cache sqlx-cli
@@ -66,7 +66,7 @@ jobs:
           - 5432:5432
     steps:
       - name: Setup | Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup | Cache rust
         uses: Swatinem/rust-cache@v1
       - name: Setup | Cache sqlx-cli
@@ -96,7 +96,7 @@ jobs:
       - name: Build | Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
-          args: --ignore-tests --avoid-cfg-tarpaulin
+          args: --ignore-tests
       - name: Post Build | Upload to codecov.io
         uses: codecov/codecov-action@v4.0.1
         with:
@@ -110,23 +110,22 @@ jobs:
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
-    env:
-      SQLX_OFFLINE: "true"
     steps:
       - name: Setup | Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup | Cache rust
         uses: Swatinem/rust-cache@v1
       - name: Setup | Setup rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
-          toolchain: stable
-          override: true
+          toolchain: nightly
+          components: clippy
+          override: true      
       - name: Check | Run clippy
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          args: -- -D warnings
             
 
   fmt:
@@ -134,7 +133,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup | Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup | Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -146,3 +145,14 @@ jobs:
         with:
           command: fmt
           args: --all -- --check
+            
+  audit:
+    name: Audit Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup | Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup | Run Cargo Audit
+        uses: actions-rs/audit-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
