--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -2,6 +2,11 @@ name: General
 
 on: [push, pull_request]
 
+env:
+  CARGO_TERM_COLOR: always
+  SQLX_VERSION: 0.7.1
+  SQLX_FEATURES: "rustls,postgres"
+
 jobs:
   test:
     name: Test
@@ -16,44 +21,41 @@ jobs:
         ports:
           - 5432:5432
     steps:
-      - name: Setup | Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup | Cache rust
-        uses: Swatinem/rust-cache@v1
-      - name: Setup | Cache sqlx-cli
-        uses: actions/cache@v2
-        id: cache-sqlx
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
         with:
-          path: |
-            ~/.cargo/bin/sqlx
-            ~/.cargo/bin/cargo-sqlx
-          key: ${{ runner.os }}-sqlx-cli-${{ hashFiles('**/Cargo.lock') }}
-      - name: Setup | Setup rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - name: Setup | Install sqlx-cli
-        uses: actions-rs/cargo@v1
-        if: steps.cache-sqlx.outputs.cache-hit == false
-        with:
-          command: install
-          args: sqlx-cli --version=0.5.9 --force --no-default-features --features=postgres
-      - name: Setup | Migrate database
+          key: sqlx-${{ env.SQLX_VERSION }}
+      - name: Install sqlx-cli
+        run:
+            cargo install sqlx-cli
+            --version=${{ env.SQLX_VERSION }}
+            --features ${{ env.SQLX_FEATURES }}
+            --no-default-features
+            --locked
+      - name: Migrate database
         run: |
           sudo apt-get install libpq-dev -y
-          SKIP_DOCKER=yes ./scripts/init_db.sh
-      # - name: Check | Check sqlx-data.json is up-to-date
-      #   run: |
-      #     cargo sqlx prepare --check -- --bin zero2prod
-      - name: Build | Run cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+          SKIP_DOCKER=true ./scripts/init_db.sh
+      - name: Check sqlx-data.json is up-to-date
+        run: |
+          cargo sqlx prepare --workspace --check
+      - name: Run tests
+        run: cargo test
 
-  coverage:
-    name: Coverage
+  fmt:
+    name: Rustfmt
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt
+      - name: Enforce formatting
+        run: cargo fmt --check
+
+  clippy:
+    name: Clippy
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -65,92 +67,70 @@ jobs:
         ports:
           - 5432:5432
     steps:
-      - name: Setup | Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup | Cache rust
-        uses: Swatinem/rust-cache@v1
-      - name: Setup | Cache sqlx-cli
-        uses: actions/cache@v2
-        id: cache-sqlx
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          path: |
-            ~/.cargo/bin/sqlx
-            ~/.cargo/bin/cargo-sqlx
-          key: ${{ runner.os }}-sqlx-cli-${{ hashFiles('**/Cargo.lock') }}
-      - name: Setup | Setup rust toolchain
-        uses: actions-rs/toolchain@v1
+          components: clippy
+      - uses: Swatinem/rust-cache@v2
         with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - name: Setup | Install sqlx-cli
-        uses: actions-rs/cargo@v1
-        if: steps.cache-sqlx.outputs.cache-hit == false
-        with:
-          command: install
-          args: sqlx-cli --version=0.5.9 --force --no-default-features --features=postgres
-      - name: Setup | Migrate database
+          key: sqlx-${{ env.SQLX_VERSION }}
+      - name: Install sqlx-cli
+        run:
+          cargo install sqlx-cli
+            --version=${{ env.SQLX_VERSION }}
+            --features ${{ env.SQLX_FEATURES }}
+            --no-default-features
+            --locked
+      - name: Migrate database
         run: |
           sudo apt-get install libpq-dev -y
-          SKIP_DOCKER=yes ./scripts/init_db.sh
-      - name: Build | Run cargo-tarpaulin
-        uses: actions-rs/tarpaulin@v0.1.0
-        with:
-          args: --ignore-tests
-      - name: Post Build | Upload to codecov.io
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          token: ${{secrets.CODECOV_TOKEN}}
-      - name: Post Build | Archive code coverage results
-        uses: actions/upload-artifact@v1
-        with:
-          name: code-coverage-report
-          path: cobertura.xml
+          SKIP_DOCKER=true ./scripts/init_db.sh
+      - name: Linting
+        run: cargo clippy -- -D warnings
 
-  clippy:
-    name: Clippy
+  coverage:
+    name: Code coverage
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: newsletter
+        ports:
+          - 5432:5432
     steps:
-      - name: Setup | Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Setup | Cache rust
-        uses: Swatinem/rust-cache@v1
-      - name: Setup | Setup rust toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Install libpq
+        run: sudo apt-get update && sudo apt-get install postgresql-client -y
+      - uses: Swatinem/rust-cache@v2
         with:
-          toolchain: nightly
-          components: clippy
-          override: true      
-      - name: Check | Run clippy
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-  fmt:
-    name: Formatting
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup | Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup | Install rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-          components: rustfmt
-      - name: Check | Formatting
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-            
+          key: sqlx-${{ env.SQLX_VERSION }}
+      - name: Install tarpaulin
+        run: cargo install cargo-tarpaulin
+      - name: Install sqlx-cli
+        run:
+          cargo install sqlx-cli
+          --version=${{ env.SQLX_VERSION }}
+          --features ${{ env.SQLX_FEATURES }}
+          --no-default-features
+          --locked
+      - name: Migrate database
+        run: SKIP_DOCKER=true ./scripts/init_db.sh
+      - name: Generate code coverage
+        run: cargo tarpaulin --verbose --workspace
+        
   audit:
-    name: Audit Check
+    name: Security Audit
     runs-on: ubuntu-latest
     steps:
-      - name: Setup | Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Setup | Run Cargo Audit
-        uses: actions-rs/audit-check@v1
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          components: cargo-audit
+      - name: Vulnerability Scan
+        run: cargo audit
