--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,12 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
 config = "0.13"
-uuid = { version = "1", features= ["v4"] }
+uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+tracing = { version = "0.1", features = ["log"] }
+tracing-log = "0.1"
+tracing-subscriber = { version = "0.3", features = ["registry","env-filter"] }
+tracing-bunyan-formatter = "0.3"
 
 [dependencies.sqlx]
 version = "0.7"
