--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,11 @@ config = "0.13"
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 tracing = { version = "0.1", features = ["log"] }
+tracing-actix-web = "0.7"
 tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["registry","env-filter"] }
 tracing-bunyan-formatter = "0.3"
+secrecy = { version = "0.8", features = ["serde"] }
 
 [dependencies.sqlx]
 version = "0.7"
@@ -37,3 +39,4 @@ features = [
 
 [dev-dependencies]
 reqwest = "0.11"
+once_cell = "1"
