--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,11 @@ chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-actix-web = "0.7"
 tracing-log = "0.1"
-tracing-subscriber = { version = "0.3", features = ["registry","env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3"
 secrecy = { version = "0.8", features = ["serde"] }
+unicode-segmentation = "1"
+validator = "0.16"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -35,9 +37,13 @@ features = [
   "postgres",
   "uuid",
   "chrono",
-  "migrate"
+  "migrate",
 ]
 
 [dev-dependencies]
 reqwest = "0.11"
 once_cell = "1"
+claims = "0.7"
+fake = "~2.3"
+quickcheck = "0.9.1"
+quickcheck_macros = "0.9.1"
